--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,31 +1,36 @@
-.ui.borderless.menu.headerbg{
+.headerbg{
+  background-color: #024731;
+  height: 64px;
+  color: white;
+}
+
+.headerb{
   background-color: #024731;
   height: 64px;
 }
 
-.headerbg{
-  background-color: #024731;
-  height: 64px;
+.whitetext{
+  color: white;
 }
 
 .titlebg {
   padding-top: 20px;
 }
 
-.ui.large.menu.borderless.container.midbg{
+.ui.huge.centered.image{
   box-shadow: none;
   border: none;
-  height: 50px;
+  margin-bottom: 0px;
 }
 
-.midbg{
+.ui.borderless.topMenu.menu{
   height: 61px;
-  border: #eee;
+  border: 1p solid #eee;
   margin-top: 15px;
 
 }
 
-.ui.centered.massive.image.loi{
+.ui.massive.centered.image.Midimage{
   margin-top: 20px;
   height: 600px;
   width: 100%;
@@ -33,7 +38,6 @@
 }
 
 .text.expuh{
-
   font-size: 35px;
   font-weight: bold;
   color: #024731;
@@ -42,7 +46,12 @@
 }
 
 .box{
-  padding: 70px 200px 10px 200px;
+  padding: 70px 0px 10px 0px;
+}
+
+.boxhr{
+  padding-right: 100px;
+  padding-left: 100px;
 }
 
 .box2{
@@ -50,7 +59,7 @@
 }
 
 .box3{
-  padding: 60px 200px 10px 200px;
+  padding: 30px 150px 10px 150px;
   background-color: #f7f7f7;
   height: 141px;
 }
@@ -71,6 +80,10 @@
 
 .header.mid{
   font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  color: #006cb8;
+  background-color: white;
 }
 
 .text.mid{
